updated plot outputs

--- a/Theoretical_Modelling_Output.ipynb
+++ b/Theoretical_Modelling_Output.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,15 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Choose running parameters\n",
     "\n",
     "# Template set and AGN type\n",
-    "agn_model_name = 'Type1AGN'\n",
-    "template_set_name = 'SWIRE'\n",
+    "template_set_name = 'Brown'\n",
+    "agn_model_name = 'Type2AGN'\n",
     "\n",
     "# Setup how many alpha values we want to explore\n",
     "alpha_values = np.linspace(0, 1, 11)"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "[0 rows x 112 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,18 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Mitchell\\Documents\\GitHub\\HonoursResearchProject\\astLib\\astSED.py:463: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  totalFlux=totalFlux/numpy.trapz(passband.interpolator(sedWavelengthSlice)\\\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To make this work for the redshifts we are going to need to create a new dataframe for each redshift\n",
     "# This will be a list of dataframes\n",
@@ -343,9 +334,19 @@
     "            # Calculate each filter value for the specific alpha value\n",
     "            for filter in filter_set.keys():\n",
     "                # Calculate the magnitude for the filter\n",
-    "                mag = astSED.SED.calcMag(sed, filter_set[filter], magType='AB')\n",
-    "                # Add the magnitude to the data frame\n",
-    "                flux_df.loc[j, filter + '_' + str(int(round(alpha_values[i], 2)*100))] = mag\n",
+    "                \n",
+    "                if filter == 'IRAC3.6' or filter == 'IRAC4.5' or filter == 'IRAC5.8' or filter == 'IRAC8.0':\n",
+    "                    # Calculate the magnitude for the IRAC filters\n",
+    "                    obs_flux = astSED.SED.calcFlux(sed, filter_set[filter])  \n",
+    "                    # Add the magnitude to the data frame\n",
+    "                    flux_df.loc[j, filter + '_' + str(int(round(alpha_values[i], 2)*100))] = obs_flux\n",
+    "                    \n",
+    "                else:\n",
+    "                    # Calculate the magnitude for the other filters\n",
+    "                    mag = astSED.SED.calcMag(sed, filter_set[filter], magType='AB')\n",
+    "\n",
+    "                    # Add the magnitude to the data frame\n",
+    "                    flux_df.loc[j, filter + '_' + str(int(round(alpha_values[i], 2)*100))] = mag\n",
     "                \n",
     "    # Add the redshift to the data frame\n",
     "    flux_df['z'] = redshift\n",
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,6 +379,13 @@
     "composite_fluxes.to_csv(f'outputs\\composite_seds\\{composite_choice}.csv')   \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -396,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
