--- a/Theoretical_Modelling_Output.ipynb
+++ b/Theoretical_Modelling_Output.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,15 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Choose running parameters\n",
     "\n",
     "# Template set and AGN type\n",
-    "template_set_name = 'Brown'\n",
-    "agn_model_name = 'Type2AGN'\n",
+    "template_set_name = 'SWIRE'\n",
+    "agn_model_name = 'Type1AGN'\n",
     "\n",
     "# Setup how many alpha values we want to explore\n",
     "alpha_values = np.linspace(0, 1, 11)"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "[0 rows x 112 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,9 +286,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Mitchell\\Documents\\GitHub\\HonoursResearchProject\\astLib\\astSED.py:463: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  totalFlux=totalFlux/numpy.trapz(passband.interpolator(sedWavelengthSlice)\\\n"
+     ]
+    }
+   ],
    "source": [
     "# To make this work for the redshifts we are going to need to create a new dataframe for each redshift\n",
     "# This will be a list of dataframes\n",
@@ -359,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
