added many outputs
updated output analysis code for thesis.

--- a/Theoretical_Modelling_Analysis_SingleGalaxy.ipynb
+++ b/Theoretical_Modelling_Analysis_SingleGalaxy.ipynb
@@ -5,7 +5,11 @@
    "metadata": {},
    "source": [
     "# Theoretical Modelling Analysis\n",
-    "This script will be used to generate plots for my thesis, in particular I'll generate each of the plots i need for the theoretical modelling analysis. This should be versatile enough to work for the ZFOURGE observational (semi-empirical) models, and the pure theoretical models."
+    "It might be worth following a single galaxy (or a couple)  in this script as a way of looking at particular changes. Ideally picking an extreme galaxy that could potentially be affected in both the UVJ, ugr, and the IRAC? worth having a look \n",
+    "\n",
+    "\n",
+    "\n",
+    " $\\textbf{!!! Currently this is just been copied from another script , it will need to be adjusted for a single galaxy look + SED investigation}$!!!"
    ]
   },
   {
@@ -878,19 +882,6 @@
     }
    ],
    "source": [
-    "# We can do this a few ways\n",
-    "# We can either do a similar plot to above\n",
-    "# or we can do similar to sam's thesis work\n",
-    "\n",
-    "# Essentially we want to quantify the values for missed selection, misidentifications, and correct identifications\n",
-    "# and see how those change with the alpha values\n",
-    "\n",
-    "selection_statistics = {'Missed Selection': [], 'Misidentification': [], 'Correct Identification': []}\n",
-    "\n",
-    "# The true values exsist for each of these regions - as we have developed the code to see if a galaxy is in a particular region\n",
-    "# and we know the redshift (as we artifically redshifted the galaxy\n",
-    "\n",
-    "\n",
     "\n",
     "# ugr Diagram \n",
     "fig, axs = plt.subplots(3, 4, figsize=fig_size_params, sharex=True, sharey=True)\n",
@@ -939,20 +930,7 @@
     "    # Additionally we can plot the UGR selection criteria on the UGR diagram\n",
     "    U_rule = [[1.2,9], [1.2,2.2], [0.6,1.6], [-3,1.6], [-3,9]]\n",
     "    axs[n//4, n%4].add_patch(plt.Polygon(U_rule, closed=True, fill=True, facecolor=(1,0,0,0.05), edgecolor=(0,0,0,1), linewidth=2, linestyle='solid')) # This looks like the correct U dropout technique\n",
-    "    \n",
-    "    \n",
-    "    # The path here is the UGR selection criteria, we can find the selected points in this particular population using the path\n",
-    "    # Create Path objects from your path coordinates (do this once, outside the loop)\n",
-    "    path = mpath.Path(U_rule)\n",
-    "    \n",
-    "    # Create a DataFrame with just the u-g and g-r columns for easier selection\n",
-    "    ugr_data = pd.DataFrame({'gr': gr_specific_alpha_colours, 'ug': ug_specific_alpha_colours})\n",
-    "    \n",
-    "    # Perform the selection\n",
-    "    selected_seds = ugr_data[path.contains_points(ugr_data.values)]\n",
-    "    non_selected_seds = ugr_data[~path.contains_points(ugr_data.values)]\n",
-    "    \n",
-    "    # Calculate the fractions - need to check against redshift numbers etc\n",
+    "\n",
     "    axs[n//4, n%4].set_xlim(-1, 4)\n",
     "    axs[n//4, n%4].set_ylim(-1, 8.5)\n",
     "    \n",
