--- a/Theoretical_Modelling_Analysis.ipynb
+++ b/Theoretical_Modelling_Analysis.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import astropy.units as u\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +51,7 @@
     "# Read in the dataframe\n",
     "\n",
     "template_set_name = 'Brown'\n",
-    "agn_model_name = 'Type2AGN'\n",
+    "agn_model_name = 'Type1AGN'\n",
     "\n",
     "composite_choice = f'{template_set_name}_theoretical_composite_fluxes_{agn_model_name}'\n",
     "\n",
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +75,7 @@
        "5120"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +442,7 @@
        "100      0.398438   0.523438  0.070312"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -518,140 +509,156 @@
      "text": [
       "[0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1.  1.1 1.2 1.3 1.4 1.5 1.6 1.7\n",
       " 1.8 1.9 2.  2.1 2.2 2.3 2.4 2.5 2.6 2.7 2.8 2.9 3.  3.1 3.2 3.3 3.4 3.5\n",
-      " 3.6 3.7 3.8 3.9]\n"
+      " 3.6 3.7 3.8 3.9]\n",
+      "Correct Identification: 852\n",
+      "Correct Non-UGR Identification: 3700\n",
+      "Misidentification: 140\n",
+      "Missed Selection: 428\n",
+      "Correct Identification: 851\n",
+      "Correct Non-UGR Identification: 3700\n",
+      "Misidentification: 140\n",
+      "Missed Selection: 429\n",
+      "Correct Identification: 849\n",
+      "Correct Non-UGR Identification: 3702\n",
+      "Misidentification: 138\n",
+      "Missed Selection: 431\n",
+      "Correct Identification: 848\n",
+      "Correct Non-UGR Identification: 3702\n",
+      "Misidentification: 138\n",
+      "Missed Selection: 432\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  non_selected_seds['redshift'] = redshifts_non_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:90: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  selected_seds['redshift'] = redshifts_selected\n",
-      "<ipython-input-382-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
+      "<ipython-input-9-8bb285bd4aa6>:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -674,22 +681,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correct Identification: 852\n",
-      "Correct Non-UGR Identification: 3700\n",
-      "Misidentification: 140\n",
-      "Missed Selection: 428\n",
-      "Correct Identification: 851\n",
-      "Correct Non-UGR Identification: 3700\n",
-      "Misidentification: 140\n",
-      "Missed Selection: 429\n",
-      "Correct Identification: 849\n",
-      "Correct Non-UGR Identification: 3702\n",
-      "Misidentification: 138\n",
-      "Missed Selection: 431\n",
-      "Correct Identification: 848\n",
-      "Correct Non-UGR Identification: 3702\n",
-      "Misidentification: 138\n",
-      "Missed Selection: 432\n",
       "Correct Identification: 847\n",
       "Correct Non-UGR Identification: 3702\n",
       "Misidentification: 138\n",
@@ -938,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1452,7 @@
        "10    100      1.000000"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1903,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2267,7 @@
        "[5120 rows x 112 columns]"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2287,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2660,7 +2651,7 @@
        "[5120 rows x 112 columns]"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2671,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2748,7 +2739,7 @@
        "Type 2  0.001527  0.001718  0.001908  "
       ]
      },
-     "execution_count": 393,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2834,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2911,7 +2902,7 @@
        "Type 2  0.072723  0.078255  0.083495  "
       ]
      },
-     "execution_count": 394,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2981,7 +2972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3058,7 +3049,7 @@
        "Type 2  0.224101  0.237797  0.250441  "
       ]
      },
-     "execution_count": 395,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3120,7 +3111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
