added plenty of analysis for template extraction code

--- a/SedProcessing_ZFOURGETest.ipynb
+++ b/SedProcessing_ZFOURGETest.ipynb
@@ -180,12 +180,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filters\n",
+    "# In addition also use astSED to create filters\n",
+    "\n",
+    "# Read in all filters\n",
+    "\n",
+    "\n",
+    "# UVJ Filters\n",
     "pb_U_path = os.path.join('datasets', 'Filters', 'Generic_Johnson.U.dat')\n",
     "pb_V_path = os.path.join('datasets', 'Filters', 'Generic_Johnson.V.dat')\n",
     "pb_J_path = os.path.join('datasets', 'Filters', '2MASS_2MASS.J.dat')\n",
+    "# Spitzer filters\n",
+    "pb_f3_6_path = os.path.join('datasets', 'filters', 'Spitzer_IRAC.I1.dat')\n",
+    "pb_f4_5_path = os.path.join('datasets', 'filters', 'Spitzer_IRAC.I2.dat')\n",
+    "pb_f5_8_path = os.path.join('datasets', 'filters', 'Spitzer_IRAC.I3.dat')\n",
+    "pb_f8_0_path = os.path.join('datasets', 'filters', 'Spitzer_IRAC.I4.dat')\n",
+    "# ugr filters\n",
+    "pb_u_path = os.path.join('datasets', 'filters', 'Paranal_OmegaCAM.u_SDSS.dat')\n",
+    "pb_g_path = os.path.join('datasets', 'filters', 'Paranal_OmegaCAM.g_SDSS.dat')\n",
+    "pb_r_path = os.path.join('datasets', 'filters', 'Paranal_OmegaCAM.r_SDSS.dat')\n",
     "\n",
     "\n",
+    "# Load all of the filters \n",
+    "pb_U = astSED.Passband(pb_U_path, normalise=False)\n",
+    "pb_V = astSED.Passband(pb_V_path, normalise=False)\n",
+    "pb_J = astSED.Passband(pb_J_path, normalise=False)\n",
+    "pb_f3_6 = astSED.Passband(pb_f3_6_path, normalise=False)\n",
+    "pb_f4_5 = astSED.Passband(pb_f4_5_path, normalise=False)\n",
+    "pb_f5_8 = astSED.Passband(pb_f5_8_path, normalise=False)\n",
+    "pb_f8_0 = astSED.Passband(pb_f8_0_path, normalise=False)\n",
+    "pb_u = astSED.Passband(pb_u_path, normalise=False)\n",
+    "pb_g = astSED.Passband(pb_g_path, normalise=False)\n",
+    "pb_r = astSED.Passband(pb_r_path, normalise=False)\n",
+    "\n",
+    "filter_set = {'U': pb_U, 'V':pb_V, 'J':pb_J, 'IRAC3.6': pb_f3_6,'IRAC4.5': pb_f4_5,'IRAC5.8': pb_f5_8, 'IRAC8.0':pb_f8_0, 'u': pb_u, 'g': pb_g, 'r':pb_r}\n",
     "\n",
     "# Skirtor models\n",
     "skirtor_folderpath = os.path.join('datasets', 'Templates', 'Skirtor')"
