updated all outputs.
added extra outputs and galaxy fraction labels.

--- a/SedProcessing_SWIRECompositesTest.ipynb
+++ b/SedProcessing_SWIRECompositesTest.ipynb
@@ -1602,7 +1602,7 @@
    "source": [
     "# Before looping through the galaxies we can test the code with just one galaxy\n",
     "# We attempt this method with multiple different values of alpha, as defined before\n",
-    "alpha = np.linspace(0, 1, 12)\n",
+    "alpha = np.linspace(0, 3, 8)\n",
     "\n",
     "n = 8\n",
     "\n",
@@ -1726,7 +1726,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save to outputs folder\n",
-    "plt.savefig('outputs/Type1AGNSWIREComposites.png', bbox_inches='tight', pad_inches=0.1, facecolor='white')\n",
+    "#plt.savefig('outputs/Type1AGNSWIREComposites.png', bbox_inches='tight', pad_inches=0.1, facecolor='white')\n",
     "\n",
     "plt.show()\n",
     "\n"
@@ -1840,7 +1840,7 @@
     "#plt.title('Comparison of SED fluxes')\n",
     "plt.grid()\n",
     "plt.legend()\n",
-    "plt.savefig('Flux Comparisons.png', bbox_inches='tight', pad_inches=0.1, facecolor='white')\n",
+    "#plt.savefig('Flux Comparisons.png', bbox_inches='tight', pad_inches=0.1, facecolor='white')\n",
     "plt.show()"
    ]
   },
@@ -1922,7 +1922,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save to outputs folder\n",
-    "plt.savefig('outputs/Type2AGNComposites.png', bbox_inches='tight', pad_inches=0.1, facecolor='white')\n",
+    "#plt.savefig('outputs/Type2AGNComposites.png', bbox_inches='tight', pad_inches=0.1, facecolor='white')\n",
     "\n",
     "plt.show()\n"
    ]
@@ -2256,7 +2256,7 @@
     "plt.axvline(1.2, color='black', linestyle='--', ymin=0, ymax=1.60333/2.5)\n",
     "\n",
     "# Save to outputs folder\n",
-    "plt.savefig('outputs/SWIRE'+agn_type+'AGNUVJ.png', bbox_inches='tight', pad_inches=0.1, facecolor='white')\n",
+    "#plt.savefig('outputs/SWIRE'+agn_type+'AGNUVJ.png', bbox_inches='tight', pad_inches=0.1, facecolor='white')\n",
     "\n",
     "plt.show()\n",
     "\n"
@@ -2720,7 +2720,7 @@
     "    plt.text(-0.4, 0.1, f'Tau: {tau}, p: {p}, q: {q}, oa: {oa}, rr: {rr}, i: {SKIRTOR_PARAMS[\"i\"][n]}', fontsize=12)\n",
     "\n",
     "    # Save to outputs folder\n",
-    "    plt.savefig('outputs/UVJPlots/SWIRE_Composite'+str(SKIRTOR_PARAMS['i'][n]) +'i_'+str(SKIRTOR_PARAMS['tau'][tau_val])+'tau_AGNUVJ.png', bbox_inches='tight', dpi=300, facecolor='white')\n",
+    "   # plt.savefig('outputs/UVJPlots/SWIRE_Composite'+str(SKIRTOR_PARAMS['i'][n]) +'i_'+str(SKIRTOR_PARAMS['tau'][tau_val])+'tau_AGNUVJ.png', bbox_inches='tight', dpi=300, facecolor='white')\n",
     "\n",
     "    plt.show()\n",
     "    \n"
