added extra analysis code

--- a/Observational_Modelling_Analysis.ipynb
+++ b/Observational_Modelling_Analysis.ipynb
@@ -2895,7 +2895,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # ugr space\n",
+    "# vector_magnitude_table = pd.DataFrame(columns=alpha_values[1:], index=['Type 1', 'Type 2'])\n",
+    "\n",
+    "# for type in types:\n",
+    "#     if type == 'Type 1':\n",
+    "#         composite_fluxes = composite_fluxes_type1\n",
+    "#     else:\n",
+    "#         composite_fluxes = composite_fluxes_type2\n",
+    "        \n",
+    "#     for alpha in alpha_values:\n",
+    "#         # Get the u, g, and r magnitudes for the specific alpha value\n",
+    "#         u_col_name = f'u_{int(round(alpha, 2))}'\n",
+    "#         g_col_name = f'g_{int(round(alpha, 2))}'\n",
+    "#         r_col_name = f'r_{int(round(alpha, 2))}'\n",
+    "\n",
+    "#         # Create the colours for the UGR diagram\n",
+    "#         ug_specific_alpha_colours = composite_fluxes[u_col_name] - composite_fluxes[g_col_name]\n",
+    "#         gr_specific_alpha_colours = composite_fluxes[g_col_name] - composite_fluxes[r_col_name]\n",
+    "\n",
+    "\n",
+    "#         if alpha == 0:\n",
+    "#             # uv and vj initial values\n",
+    "#             ug_initial = ug_specific_alpha_colours\n",
+    "#             gr_initial = gr_specific_alpha_colours\n",
+    "            \n",
+    "#             # Get the average location\n",
+    "#             ug_mean_inital = np.mean(ug_initial)\n",
+    "#             gr_mean_inital = np.mean(gr_initial)\n",
+    "            \n",
+    "#             # print the mean location\n",
+    "#             #print(f\"Mean Location for alpha = {alpha_values[m]}: ({vj_mean_inital}, {vj_mean_inital})\")\n",
+    "            \n",
+    "#         else:\n",
+    "#             # Get the vector magnitude\n",
+    "#             # Get the average location\n",
+    "#             ug_mean = np.mean(ug_specific_alpha_colours)\n",
+    "#             gr_mean = np.mean(gr_specific_alpha_colours)\n",
+    "            \n",
+    "#             # print the mean location\n",
+    "#             #print(f\"Mean Location for alpha = {alpha_values[m]}: ({vj_mean}, {uv_mean})\")\n",
+    "            \n",
+    "#             # calculate the absolute vector magnitude difference\n",
+    "#             vector_magnitude_diff = np.sqrt((ug_mean - ug_mean_inital)**2 + (gr_mean - gr_mean_inital)**2)\n",
+    "                \n",
+    "#             # Add the vector magnitude to the table\n",
+    "#             vector_magnitude_table.loc[type, alpha] = vector_magnitude_diff\n",
+    "            \n",
+    "# if save_figures:\n",
+    "#     vector_magnitude_table.to_csv(f'outputs/ThesisPlots/UGR_VectorMagnitudeDifference_{agn_model_names[0]}_{agn_model_names[1]}_{template_set_name}.csv')\n",
+    "    \n",
+    "# # Check the output\n",
+    "# vector_magnitude_table"
+   ]
   },
   {
    "cell_type": "code",
