updated observational code

--- a/Observational_Modelling_Analysis.ipynb
+++ b/Observational_Modelling_Analysis.ipynb
@@ -2782,10 +2782,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get information on each of the redshift bin galaxies\n",
+    "output_df = composite_fluxes[composite_fluxes['id'].isin([less_than_2_6_galaxy_id, greater_than_3_5_galaxy_id, target_galaxy_id])].copy()\n",
+    "\n",
+    "# Create a new dataframe from above showing the ID, redshift, and the bin they are cateogrised in\n",
+    "\n",
+    "# Create a new column for the redshift bin\n",
+    "new_df = pd.DataFrame({'ID': output_df['id'], 'Redshift': output_df['z'], 'Bin': ['z < 2.6', 'z > 3.5', '2.6 < z < 3.5']})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df \n",
+    "# Switch rows 1, and 2\n",
+    "new_df.iloc[1], new_df.iloc[2] = new_df.iloc[2].copy(), new_df.iloc[1].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.to_csv(f'outputs/ThesisPlots/{composite_choice}_EAZY_ugr_galaxies.csv')\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -2849,16 +2878,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "offset_df = pd.DataFrame({'z < 2.6': less_offset, 'z > 3.5': greater_offset, '2.6 < z < 3.6': target_offset}, index=alpha_values[1:])\n"
+    "offset_df = pd.DataFrame({'z < 2.6': less_offset, '2.6 < z < 3.6': target_offset, 'z > 3.5': greater_offset}, index=alpha_values[1:])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
