needs to be updated as the output didn't work

--- a/DataAnalysis_DecomposedSEDs.ipynb
+++ b/DataAnalysis_DecomposedSEDs.ipynb
@@ -370,7 +370,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Now that we have this we can explore\n",
+    "# "
+   ]
   }
  ],
  "metadata": {
