added error analysis code
added all error analysis code for cigale uvj errors. All that is needed is to run the full code at home.

--- a/CIGALE_DecomposedSEDs_Output.ipynb
+++ b/CIGALE_DecomposedSEDs_Output.ipynb
@@ -1868,6 +1868,17 @@
     "vj_full_colours = []\n",
     "\n",
     "\n",
+    "\n",
+    "# Instead of doing it this way we will calculate the individual magnitudes\n",
+    "u_mags_full = []\n",
+    "v_mags_full = []\n",
+    "j_mags_full = []\n",
+    "\n",
+    "u_mags_galaxy = []\n",
+    "v_mags_galaxy = []\n",
+    "j_mags_galaxy = []\n",
+    "\n",
+    "\n",
     "ug_galaxy_colours = []\n",
     "gr_galaxy_colours = []\n",
     "\n",
@@ -1884,14 +1895,20 @@
     "    fl = sed_data['L_lambda_total_decomposed']  \n",
     "    sed = astSED.SED(wavelength=wl, flux=fl, z=0.0)    \n",
     "    try:\n",
-    "        uv = astSED.SED.calcColour(sed, pb_U, pb_V, magType='AB')\n",
-    "        vj = astSED.SED.calcColour(sed, pb_V, pb_J, magType='AB')\n",
+    "        u = astSED.SED.calcMag(sed, pb_U, magType='AB')\n",
+    "        v = astSED.SED.calcMag(sed, pb_V, magType='AB')\n",
+    "        j = astSED.SED.calcMag(sed, pb_J, magType='AB')\n",
+    "        \n",
     "    except:\n",
-    "        uv = np.nan\n",
-    "        vj = np.nan\n",
+    "        u = np.nan\n",
+    "        v = np.nan\n",
+    "        j = np.nan\n",
+    "        \n",
     "    # Append colours to list\n",
-    "    uv_galaxy_colours.append(uv)\n",
-    "    vj_galaxy_colours.append(vj)\n",
+    "    u_mags_galaxy.append(u)\n",
+    "    v_mags_galaxy.append(v)\n",
+    "    j_mags_galaxy.append(j)\n",
+    "    \n",
     "    \n",
     "    \n",
     "    \n",
@@ -1900,55 +1917,63 @@
     "    fl = sed_data['L_lambda_total']\n",
     "    sed = astSED.SED(wavelength=wl, flux=fl, z=0.0)    \n",
     "    try:\n",
-    "        uv = astSED.SED.calcColour(sed, pb_U, pb_V, magType='AB')\n",
-    "        vj = astSED.SED.calcColour(sed, pb_V, pb_J, magType='AB')\n",
+    "        # uv = astSED.SED.calcColour(sed, pb_U, pb_V, magType='AB')\n",
+    "        # vj = astSED.SED.calcColour(sed, pb_V, pb_J, magType='AB')\n",
+    "        u = astSED.SED.calcMag(sed, pb_U, magType='AB')\n",
+    "        v = astSED.SED.calcMag(sed, pb_V, magType='AB')\n",
+    "        j = astSED.SED.calcMag(sed, pb_J, magType='AB')\n",
+    "        \n",
     "    except:\n",
-    "        uv = np.nan\n",
-    "        vj = np.nan\n",
+    "        u = np.nan\n",
+    "        v = np.nan\n",
+    "        j = np.nan\n",
+    "        \n",
     "    # Append colours to list\n",
-    "    uv_full_colours.append(uv)\n",
-    "    vj_full_colours.append(vj)\n",
+    "    u_mags_full.append(u)\n",
+    "    v_mags_full.append(v)\n",
+    "    j_mags_full.append(j)\n",
     "    \n",
     "    \n",
     "    \n",
     "    \n",
+    "    # This doesn't work so we can ignore this\n",
     "    \n",
     "    \n",
-    "    # In addition to this we would also like to calculate the ug and gr colours\n",
-    "    # Note that we need to need to redshift the sed\n",
-    "    # Decomposed first\n",
-    "    wl = sed_data['wavelength']\n",
-    "    fl = sed_data['L_lambda_total_decomposed']\n",
-    "    sed = astSED.SED(wavelength=wl, flux=fl, z=0.0)\n",
-    "    # redshift\n",
-    "    sed.redshift(all_redshifts[i])\n",
-    "    try:\n",
-    "        ug = astSED.SED.calcColour(sed, pb_u, pb_g, magType='AB')\n",
-    "        gr = astSED.SED.calcColour(sed, pb_g, pb_r, magType='AB')\n",
-    "    except:\n",
-    "        ug = np.nan\n",
-    "        gr = np.nan\n",
-    "    ug_galaxy_colours.append(ug)\n",
-    "    gr_galaxy_colours.append(gr)\n",
+    "#     # In addition to this we would also like to calculate the ug and gr colours\n",
+    "#     # Note that we need to need to redshift the sed <- \n",
+    "#     # Decomposed first\n",
+    "#     wl = sed_data['wavelength']\n",
+    "#     fl = sed_data['L_lambda_total_decomposed']\n",
+    "#     sed = astSED.SED(wavelength=wl, flux=fl, z=0.0)\n",
+    "#     # redshift\n",
+    "#     sed.redshift(all_redshifts[i])\n",
+    "#     try:\n",
+    "#         ug = astSED.SED.calcColour(sed, pb_u, pb_g, magType='AB')\n",
+    "#         gr = astSED.SED.calcColour(sed, pb_g, pb_r, magType='AB')\n",
+    "#     except:\n",
+    "#         ug = np.nan\n",
+    "#         gr = np.nan\n",
+    "#     ug_galaxy_colours.append(ug)\n",
+    "#     gr_galaxy_colours.append(gr)\n",
     "    \n",
     "    \n",
     "    \n",
-    "    # now for the full colours\n",
-    "    wl = sed_data['wavelength']\n",
-    "    fl = sed_data['L_lambda_total']\n",
-    "    sed = astSED.SED(wavelength=wl, flux=fl, z=0.0)\n",
-    "    # redshift\n",
-    "    sed.redshift(all_redshifts[i])\n",
-    "    try:\n",
-    "        ug = astSED.SED.calcColour(sed, pb_u, pb_g, magType='AB')\n",
-    "        gr = astSED.SED.calcColour(sed, pb_g, pb_r, magType='AB')\n",
-    "    except:\n",
-    "        ug = np.nan\n",
-    "        gr = np.nan\n",
-    "    ug_full_colours.append(ug)\n",
-    "    gr_full_colours.append(gr)\n",
+    "#     # now for the full colours\n",
+    "#     wl = sed_data['wavelength']\n",
+    "#     fl = sed_data['L_lambda_total']\n",
+    "#     sed = astSED.SED(wavelength=wl, flux=fl, z=0.0)\n",
+    "#     # redshift\n",
+    "#     sed.redshift(all_redshifts[i])\n",
+    "#     try:\n",
+    "#         ug = astSED.SED.calcColour(sed, pb_u, pb_g, magType='AB')\n",
+    "#         gr = astSED.SED.calcColour(sed, pb_g, pb_r, magType='AB')\n",
+    "#     except:\n",
+    "#         ug = np.nan\n",
+    "#         gr = np.nan\n",
+    "#     ug_full_colours.append(ug)\n",
+    "#     gr_full_colours.append(gr)\n",
     "    \n",
-    "# Add the colours to the export_df\n",
+    "# # Add the colours to the export_df\n",
     "\n",
     "    "
    ]
@@ -1961,21 +1986,18 @@
    "source": [
     "# To ensure we can do quick an speedy data analysis we will create a new dataframe: \n",
     "# it will contain the full UVJ colours, the decomposed UVJ colours, and the redshifts, and the names of the galaxies\n",
-    "decomposed_df = pd.DataFrame(columns=['ID', 'UV_Full', 'VJ_Full', 'UV_Decomposed', 'VJ_Decomposed', 'zpk'])\n",
+    "decomposed_df = pd.DataFrame(columns=['ID', 'U_Full', 'V_Full','J_Full', 'U_Decomposed', 'V_Decomposed','J_Decomposed',  'zpk'])\n",
     "\n",
     "decomposed_df['ID'] = all_names\n",
     "\n",
     "# UVJ colours\n",
-    "decomposed_df['UV_Full'] = uv_full_colours\n",
-    "decomposed_df['VJ_Full'] = vj_full_colours\n",
-    "decomposed_df['UV_Decomposed'] = uv_galaxy_colours\n",
-    "decomposed_df['VJ_Decomposed'] = vj_galaxy_colours\n",
+    "decomposed_df['U_Full'] = u_mags_full\n",
+    "decomposed_df['V_Full'] = v_mags_full\n",
+    "decomposed_df['J_Full'] = j_mags_full\n",
+    "decomposed_df['U_Decomposed'] = u_mags_galaxy\n",
+    "decomposed_df['V_Decomposed'] = v_mags_galaxy\n",
+    "decomposed_df['J_Decomposed'] = j_mags_galaxy\n",
     "\n",
-    "# UGR colours\n",
-    "decomposed_df['UG_Full'] = ug_full_colours\n",
-    "decomposed_df['GR_Full'] = gr_full_colours\n",
-    "decomposed_df['UG_Decomposed'] = ug_galaxy_colours\n",
-    "decomposed_df['GR_Decomposed'] = gr_galaxy_colours\n",
     "\n",
     "# redshifts\n",
     "decomposed_df['zpk'] = all_redshifts\n",
@@ -2015,12 +2037,12 @@
     "print(len(uv_galaxy_colours))\n",
     "print(len(vj_galaxy_colours))\n",
     "\n",
-    "# Print the ugr\n",
-    "print(len(ug_full_colours))\n",
-    "print(len(gr_full_colours))\n",
+    "# # Print the ugr\n",
+    "# print(len(ug_full_colours))\n",
+    "# print(len(gr_full_colours))\n",
     "\n",
-    "print(len(ug_galaxy_colours))\n",
-    "print(len(gr_galaxy_colours))\n",
+    "# print(len(ug_galaxy_colours))\n",
+    "# print(len(gr_galaxy_colours))\n",
     "\n",
     "# and redshift\n",
     "print(len(all_names))\n",
@@ -2348,6 +2370,14 @@
     }
    ],
    "source": [
+    "\n",
+    "uv_full_colours = decomposed_df['U_Full'] - decomposed_df['V_Full']\n",
+    "vj_full_colours = decomposed_df['V_Full'] - decomposed_df['J_Full']\n",
+    "\n",
+    "uv_galaxy_colours = decomposed_df['U_Decomposed'] - decomposed_df['V_Decomposed']\n",
+    "vj_galaxy_colours = decomposed_df['V_Decomposed'] - decomposed_df['J_Decomposed']\n",
+    "\n",
+    "\n",
     "# Try an average approach \n",
     "plt.figure(figsize=(6, 6))\n",
     "\n",
