updated error outputs for plot

--- a/CIGALE_DecomposedSEDs_Analysis.ipynb
+++ b/CIGALE_DecomposedSEDs_Analysis.ipynb
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import astropy.units as u\n",
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,46 +47,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Mitchell\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3165: DtypeWarning: Columns (156) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+      "C:\\Users\\Titan\\AppData\\Local\\Temp\\ipykernel_27340\\3335791282.py:2: DtypeWarning: Columns (156) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  zfourge_full = pd.read_csv('datasets/full_zfourge_decomposed/zfourge_full_final.csv')\n"
      ]
     }
    ],
    "source": [
     "# We need to ensure we are reading in our final dataframe we will be doing our analysis on. This dataframe should contain\n",
-    "zfourge_full = pd.read_csv('datasets/full_zfourge_decomposed/zfourge_full.csv')"
+    "zfourge_full = pd.read_csv('datasets/full_zfourge_decomposed/zfourge_full_final.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "0.4171    10\n",
-       "0.6654     8\n",
        "0.6127     8\n",
        "0.8630     8\n",
+       "0.6654     8\n",
        "0.9268     7\n",
        "          ..\n",
-       "2.0720     1\n",
-       "0.4775     1\n",
-       "1.5624     1\n",
-       "0.1065     1\n",
-       "0.2697     1\n",
+       "0.7856     1\n",
+       "0.3690     1\n",
+       "0.2387     1\n",
+       "3.0343     1\n",
+       "1.1598     1\n",
        "Name: zpk_x, Length: 5214, dtype: int64"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -364,18 +355,39 @@
       "UG_Full\n",
       "GR_Full\n",
       "UG_Decomposed\n",
-      "GR_Decomposed\n"
+      "GR_Decomposed\n",
+      "U_Full\n",
+      "V_Full\n",
+      "J_Full\n",
+      "U_Decomposed\n",
+      "V_Decomposed\n",
+      "J_Decomposed\n",
+      "zpk\n",
+      "Umag\n",
+      "Vmag\n",
+      "Jmag\n",
+      "eUmag\n",
+      "eVmag\n",
+      "eJmag\n",
+      "fU_Full\n",
+      "fV_Full\n",
+      "fJ_Full\n",
+      "fU_Decomposed\n",
+      "fV_Decomposed\n",
+      "fJ_Decomposed\n",
+      "eUmag_Full\n",
+      "eVmag_Full\n",
+      "eJmag_Full\n",
+      "eUmag_Decomposed\n",
+      "eVmag_Decomposed\n",
+      "eJmag_Decomposed\n",
+      "eUV_Full\n",
+      "eVJ_Full\n",
+      "eUV_Decomposed\n",
+      "eVJ_Decomposed\n",
+      "UV_cols\n",
+      "VJ_cols\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x15cf951f400>"
-      ]
-     },
-     "execution_count": 215,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2152,7 +2164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
