added some extra outputs

--- a/Theoretical_Modelling_Analysis.ipynb
+++ b/Theoretical_Modelling_Analysis.ipynb
@@ -3097,10 +3097,15 @@
     "    # angle the x axis labels\n",
     "    axs[types.index(type)].tick_params(axis='x', rotation=45)\n",
     "    \n",
+    "    # Change the font size of the labels and the ticks\n",
+    "    axs[types.index(type)].tick_params(axis='both', labelsize=12)\n",
+    "    axs[types.index(type)].set_xlabel('V - J', fontsize=12)\n",
+    "    axs[0].set_ylabel('U - V', fontsize=12)\n",
+    "    \n",
     "    \n",
     "# Add colourbar\n",
     "sm = plt.cm.ScalarMappable(cmap=plt.cm.viridis, norm=plt.Normalize(vmin=min(alpha_values), vmax=max(alpha_values)))\n",
-    "cbar = plt.colorbar(sm, ax=axs[1])\n",
+    "cbar = plt.colorbar(sm, ax=axs[1], fontsize=12)\n",
     "\n",
     "# Add the colorbar label for the second plot\n",
     "cbar.set_label('AGN Contribution (%)')\n",
@@ -3554,7 +3559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
