updated outputs with errors

--- a/ZFourgeUVJInvestigation.ipynb
+++ b/ZFourgeUVJInvestigation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +100,187 @@
     "field = \"COSMOS\"\n",
     "# As we are only working with the ZFOURGE Survey, we will only read in the CDFS data\n",
     "df = read_zfourge_data(field, zfourge_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recno\n",
+      "id\n",
+      "xpos\n",
+      "ypos\n",
+      "RAJ2000\n",
+      "DEJ2000\n",
+      "SE\n",
+      "IsoArea\n",
+      "FKsap\n",
+      "e_FKsap\n",
+      "apcorr\n",
+      "KsR\n",
+      "FKsapD\n",
+      "e_FKsapD\n",
+      "apcorrD\n",
+      "FKsD\n",
+      "e_FKsD\n",
+      "FKsauto\n",
+      "R50\n",
+      "amaj\n",
+      "bmin\n",
+      "Rad\n",
+      "FKsall\n",
+      "e_FKsall\n",
+      "w_FKsall\n",
+      "FB\n",
+      "e_FB\n",
+      "w_FB\n",
+      "Fg\n",
+      "e_Fg\n",
+      "w_Fg\n",
+      "Fi\n",
+      "e_Fi\n",
+      "w_Fi\n",
+      "IA427\n",
+      "e_IA427\n",
+      "w_IA427\n",
+      "IA484\n",
+      "e_IA484\n",
+      "w_IA484\n",
+      "IA505\n",
+      "e_IA505\n",
+      "w_IA505\n",
+      "IA527\n",
+      "e_IA527\n",
+      "w_IA527\n",
+      "IA624\n",
+      "e_IA624\n",
+      "w_IA624\n",
+      "IA709\n",
+      "e_IA709\n",
+      "w_IA709\n",
+      "IA738\n",
+      "e_IA738\n",
+      "w_IA738\n",
+      "Fr\n",
+      "e_Fr\n",
+      "w_Fr\n",
+      "Fu\n",
+      "e_Fu\n",
+      "w_Fu\n",
+      "FV\n",
+      "e_FV\n",
+      "w_FV\n",
+      "FRp\n",
+      "e_FRp\n",
+      "w_FRp\n",
+      "Fz\n",
+      "e_Fz\n",
+      "w_Fz\n",
+      "FZp\n",
+      "e_FZp\n",
+      "w_FZp\n",
+      "FHl\n",
+      "e_FHl\n",
+      "w_FHl\n",
+      "FHs\n",
+      "e_FHs\n",
+      "w_FHs\n",
+      "FJ1\n",
+      "e_FJ1\n",
+      "w_FJ1\n",
+      "FJ2\n",
+      "e_FJ2\n",
+      "w_FJ2\n",
+      "FJ3\n",
+      "e_FJ3\n",
+      "w_FJ3\n",
+      "FKs\n",
+      "e_FKs\n",
+      "w_FKs\n",
+      "NB118\n",
+      "e_NB118\n",
+      "w_NB118\n",
+      "NB209\n",
+      "e_NB209\n",
+      "w_NB209\n",
+      "F125W\n",
+      "e_F125W\n",
+      "w_F125W\n",
+      "F140W\n",
+      "e_F140W\n",
+      "w_F140W\n",
+      "F160W\n",
+      "e_F160W\n",
+      "w_F160W\n",
+      "F606W\n",
+      "e_F606W\n",
+      "w_F606W\n",
+      "F814W\n",
+      "e_F814W\n",
+      "w_F814W\n",
+      "FJvista\n",
+      "e_FJvista\n",
+      "w_FJvista\n",
+      "FHvista\n",
+      "e_FHvista\n",
+      "w_FHvista\n",
+      "FKsvista\n",
+      "e_FKsvista\n",
+      "w_FKsvista\n",
+      "FYvista\n",
+      "e_FYvista\n",
+      "w_FYvista\n",
+      "F3.6\n",
+      "e_F3.6\n",
+      "w_F3.6\n",
+      "F4.5\n",
+      "e_F4.5\n",
+      "w_F4.5\n",
+      "F5.8\n",
+      "e_F5.8\n",
+      "w_F5.8\n",
+      "F8.0\n",
+      "e_F8.0\n",
+      "w_F8.0\n",
+      "wminOpt\n",
+      "wminHST1\n",
+      "wminfs\n",
+      "wminjhk\n",
+      "wminHST2\n",
+      "wminIRAC\n",
+      "wminall\n",
+      "Star\n",
+      "Nghb\n",
+      "Use\n",
+      "SNR\n",
+      "zspec\n",
+      "Simbad\n",
+      "U\n",
+      "eU\n",
+      "V\n",
+      "eV\n",
+      "J\n",
+      "eJ\n",
+      "zpk\n",
+      "lssfr\n",
+      "lmass\n",
+      "field\n"
+     ]
+    }
+   ],
+   "source": [
+    "# columsn\n",
+    "# ]\n",
+    "df.columns\n",
+    "\n",
+    "# print all col names\n",
+    "for col in df.columns:\n",
+    "    print(col)"
    ]
   },
   {
